java hindi iter_1